--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -3,7 +3,10 @@ tagline: "Discussions about local politics and other stories around Edmonton"
 podcast_description: "Troy Pavlek digs into the basket and cracks one open, discussing local politics and other stories around Edmonton"
 url: "https://basketofyegs.com"
 google_analytics_id: "UA-72905999-1"
-itunes_url: ""
+itunes_url: "https://itunes.apple.com/ca/podcast/basket-of-yegs/id1087211817"
+facebook_url: "https://www.facebook.com/basketofyegs"
+img_url: "http://basketofyegs.com/img/logo.png"
+img_full_url: "http://basketofyegs.com/img/logo-lg.png"
 
 authors:
   host:
