--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -1,6 +1,6 @@
 title: "Basket of YEGs"
 tagline: "Discussions about local politics and other stories around Edmonton"
-podcast_description: "Troy Pavlek digs into the basket and cracks one open, discussing local politics and other stories around Edmonton"
+podcast_description: "Each podcast, Troy Pavlek digs into the basket and cracks one open, discussing local politics and other stories around Edmonton"
 url: "https://basketofyegs.com"
 google_analytics_id: "UA-72905999-1"
 itunes_url: "https://itunes.apple.com/ca/podcast/basket-of-yegs/id1087211817"
