--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -5,6 +5,7 @@ url: "https://basketofyegs.com"
 google_analytics_id: "UA-72905999-1"
 itunes_url: "https://itunes.apple.com/ca/podcast/basket-of-yegs/id1087211817"
 facebook_url: "https://www.facebook.com/basketofyegs"
+stitcher_url: "http://www.stitcher.com/podcast/troy-pavlek/basket-of-yegs"
 img_url: "http://basketofyegs.com/img/logo.png"
 img_full_url: "http://basketofyegs.com/img/logo-lg.png"
 
