--- a/app/config/sculpin_kernel.yml
+++ b/app/config/sculpin_kernel.yml
@@ -4,4 +4,5 @@ sculpin_content_types:
   podcasts:
     layout: "episode"
     permalink: "episode/:year/:month/:day/:filename/"
+    publish_drafts: false
 
